<resources>
    <string name="app_name">Capito Dico</string>

    <!-- Main Menu -->
    <string name="main_menu_cards">Les cartes</string>
    <string name="main_menu_simulator">Simulateur</string>
    <string name="main_menu_about">A propos</string>

    <!-- Cards Screen -->
    <string name="cards_title">Liste des cartes</string>
    <string name="cards_query_hint">Rechercher une carte...</string>

    <!-- Cards List -->
    <string name="cards_item_empty">Aucun résultat ne correspond à votre recherche</string>

    <!-- Cards Filter -->
    <string name="cards_filter_title">Filtres</string>
    <string-array name="cards_filter_sortby">
        <item>Alphabétique</item>
        <item>Activation</item>
        <item>Valeur</item>
    </string-array>

    <!-- Card detail -->
    <string name="card_detail_title_empty">Carte sans nom</string>
    <string name="card_detail_information_title">Informations sur la carte</string>
    <string name="card_detail_information_name">Nom:</string>
    <string name="card_detail_information_value">Valeur:</string>
    <string name="card_detail_information_priority">Priorité:</string>
    <string name="card_detail_information_description">Description:</string>
    <string name="card_detail_effect_title">Informations sur l\'effet</string>
    <string name="card_detail_effect_activation">Activation:</string>
    <string name="card_detail_effect_effect">Effet:</string>

</resources>