<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:background="@color/ca_background_dark">

    <include
        android:id="@+id/toolbarCardDetail"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageViewCardDetail"
                android:layout_width="100dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:background="@drawable/shape_background_card_detail_event_rounded"
                android:backgroundTint="@color/colorAccent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:text="@string/card_detail_information_title"
                android:textAppearance="@style/CapitoTheme.TextAppearance.LittleTitle.Regular"
                android:textColor="@color/ca_text_title" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:text="@string/card_detail_information_name"
                    android:textAppearance="@style/CapitoTheme.TextAppearance.Body2.Regular"
                    android:textColor="@color/ca_text_light_secondary" />

                <TextView
                    android:id="@+id/textViewCardDetailName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAppearance="@style/CapitoTheme.TextAppearance.Body.Medium"
                    android:textColor="@color/ca_text_light_primary"
                    tools:text="Boss de Clermont" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:text="@string/card_detail_information_value"
                    android:textAppearance="@style/CapitoTheme.TextAppearance.Body2.Regular"
                    android:textColor="@color/ca_text_light_secondary" />

                <TextView
                    android:id="@+id/textViewCardDetailValue"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAppearance="@style/CapitoTheme.TextAppearance.Body.Medium"
                    android:textColor="@color/ca_text_light_primary"
                    tools:text="5" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:text="@string/card_detail_information_priority"
                    android:textAppearance="@style/CapitoTheme.TextAppearance.Body2.Regular"
                    android:textColor="@color/ca_text_light_secondary" />

                <TextView
                    android:id="@+id/textViewCardDetailPriority"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAppearance="@style/CapitoTheme.TextAppearance.Body.Medium"
                    android:textColor="@color/ca_text_light_primary"
                    tools:text="0" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:text="@string/card_detail_information_description"
                    android:textAppearance="@style/CapitoTheme.TextAppearance.Body2.Regular"
                    android:textColor="@color/ca_text_light_secondary" />

                <TextView
                    android:id="@+id/textViewCardDetailDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:lineSpacingExtra="5dp"
                    android:textAppearance="@style/CapitoTheme.TextAppearance.Body.Medium"
                    android:textColor="@color/ca_text_light_primary"
                    tools:text="Boss de Clermont" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:text="@string/card_detail_effect_title"
                android:textAppearance="@style/CapitoTheme.TextAppearance.LittleTitle.Regular"
                android:textColor="@color/ca_text_title" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:text="@string/card_detail_effect_activation"
                    android:textAppearance="@style/CapitoTheme.TextAppearance.Body2.Regular"
                    android:textColor="@color/ca_text_light_secondary" />

                <com.google.android.flexbox.FlexboxLayout
                    android:id="@+id/flexBoxLayoutCardDetail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    app:flexWrap="wrap" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:text="@string/card_detail_effect_effect"
                    android:textAppearance="@style/CapitoTheme.TextAppearance.Body2.Regular"
                    android:textColor="@color/ca_text_light_secondary" />

                <TextView
                    android:id="@+id/textViewCardDetailEffect"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:lineSpacingExtra="5dp"
                    android:textAppearance="@style/CapitoTheme.TextAppearance.Body.Medium"
                    android:textColor="@color/ca_text_light_primary"
                    tools:text="L'effet de la carte est ..." />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>